Address additional requirements (responsive images in a row, pagination limitation).

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,18 @@
 .buttonActive {
-    background-color: green;
-    color: white;
+  background-color: green;
+  color: white;
+}
+
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.image {
+  width: 10%;
+  height: auto;
+  margin: 0;
 }
